--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Asteroids</title>
     <style></style>
-    <script type="text/javascript" src="./neural-network-02.js"></script>
 </head>
 
 <body>
@@ -33,21 +32,12 @@
         const SHIP_SIZE = 30; // ship height in pixels
         const SHIP_THRUST = 5; // acceleration of the ship in pixels per second per second
         const SHIP_TURN_SPD = 360; // turn speed in degrees per second
-        const TEXT_FADE_TIME = 2.5; // text fade time in seconds
-        const TEXT_SIZE = 40; // text font height in pixels
-
-        // developer flags
-        const AUTOMATION_ON = true;
-        const MUSIC_ON = false;
-        const SOUND_ON = false;
         const SHOW_BOUNDING = false; // show or hide collision bounding
         const SHOW_CENTRE_DOT = false; // show or hide ship's centre dot
-
-        // neural network parameters
-        const NUM_INPUTS = 2;
-        const NUM_HIDDEN = 5;
-        const NUM_OUTPUTS = 1;
-        const NUM_SAMPLES = 10000;
+        const MUSIC_ON = true;
+        const SOUND_ON = true;
+        const TEXT_FADE_TIME = 2.5; // text fade time in seconds
+        const TEXT_SIZE = 40; // text font height in pixels
 
         /** @type {HTMLCanvasElement} */
         var canv = document.getElementById("gameCanvas");
@@ -66,33 +56,6 @@
         // set up the game parameters
         var level, lives, roids, score, scoreHigh, ship, text, textAlpha;
         newGame();
-
-        // set up the neural network
-        var nn;
-        if (AUTOMATION_ON) {
-            nn = new NeuralNetwork(NUM_INPUTS, NUM_HIDDEN, NUM_OUTPUTS);
-
-            // train the network
-            for (let i = 0; i < NUM_SAMPLES; i++) {
-                // TEST XOR gate logic
-                // 0 0 = 0
-                // 0 1 = 1
-                // 1 0 = 1
-                // 1 1 = 0
-
-                let input0 = Math.round(Math.random()); // 0 or 1
-                let input1 = Math.round(Math.random()); // 0 or 1
-                let output = input0 == input1 ? 0 : 1;
-                nn.train([input0, input1], [output]);
-            }
-
-            // test output
-            console.log("0, 0 = " + nn.feedForward([0, 0]).data);
-            console.log("0, 1 = " + nn.feedForward([0, 1]).data);
-            console.log("1, 0 = " + nn.feedForward([1, 0]).data);
-            console.log("1, 1 = " + nn.feedForward([1, 1]).data);
-            
-        }
 
         // set up event handlers
         document.addEventListener("keydown", keyDown);
@@ -192,7 +155,7 @@
 
         function keyDown(/** @type {KeyboardEvent} */ ev) {
 
-            if (ship.dead || AUTOMATION_ON) {
+            if (ship.dead) {
                 return;
             }
 
@@ -214,7 +177,7 @@
 
         function keyUp(/** @type {KeyboardEvent} */ ev) {
 
-            if (ship.dead || AUTOMATION_ON) {
+            if (ship.dead) {
                 return;
             }
 
@@ -374,11 +337,6 @@
         function update() {
             var blinkOn = ship.blinkNum % 2 == 0;
             var exploding = ship.explodeTime > 0;
-
-            // use the neural network to rotate the ship and shoot
-            if (AUTOMATION_ON) {
-                // TODO control ship
-            }
 
             // tick the music
             music.tick();
