--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>Asteroids</h1>
     <canvas id="gameCanvas" width="760" height="570"></canvas>
     <script>
         const FPS = 30; // frames per second
