--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Asteroids</title>
-    <style></style>
+    <style>
+    <div class="headertext">
+        <h1 class="Roboto">ASTEROIDS</h1>
+    </div>
+    </style>
 </head>
 
 <body>
-    <h1>Asteroids</h1>
+    .headertext {
+                    margin-top: 0px;
+                    margin-bottom: 0px;
+                    margin-right: 0px;
+                    margin-left: 20px;
+                }
     <canvas id="gameCanvas" width="760" height="570"></canvas>
     <script>
         const FPS = 30; // frames per second
