--- a/index.html
+++ b/index.html
@@ -3,21 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Asteroids</title>
-    <style>
-    <div class="headertext">
-        <h1 class="Roboto">ASTEROIDS</h1>
-    </div>
-    </style>
+    <title>Old Timey Games</title>
+    <style></style>
 </head>
 
 <body>
-    .headertext {
-                    margin-top: 0px;
-                    margin-bottom: 0px;
-                    margin-right: 0px;
-                    margin-left: 20px;
-                }
+    <h1>Asteroids!</h1>
     <canvas id="gameCanvas" width="760" height="570"></canvas>
     <script>
         const FPS = 30; // frames per second
