--- a/asteroids.html
+++ b/asteroids.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Old Timey Games</title>
+    <title>Asteroids!</title>
     <style></style>
 </head>
 
