--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Old Timey Games!</h1>
     <a href="asteroids.html" title="Asteroids"></a>
+    <a href="snake.html" title="Snake"></a>
 </body>
 
 </html>
