--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Old Timey Games!</h1>
-    <a href="asteroids.html" title="Asteroids"></a>
+    <a href="asteroids.html" title="Asteroids!"></a>
 </body>
 
 </html>
